[HIK-5] Provide complete but basic JWT config